--- a/page10.html
+++ b/page10.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="E0XZ4C4th/HoWV2R3ppWhaGCyZ98jwhb3wrfjCEAGDS9OjaIv6RfdHypf1y+upk82LN4IP/qSMOMERkVXVyGK7hrCDglKYiBZiewgUOxxFjHbhxhPKkFjjchOQdy6LcX">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="hyc21HCWurCEuoVgXZsyaqV0WgJRLYVjwQBPfn7NFb2T8hwvpPuUTU0VvjMl42A4kDgoqalpa5r5dyLt6JlUGL9j52Y2QKbS/eHEUKx1x4E1TdJUr+9sSiMh7jZLUD1v">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
