--- a/page4.html
+++ b/page4.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section content5 cid-r6QfwbDyCS" id="content5-49">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="mbr-section content5 cid-r6QfwbDyCS" id="content5-49">
 
     
 
@@ -269,7 +269,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/fa79de2a033f24fed282ff9ffd075b4c.gif" alt="Mobirise" title="">  
+                      <a href="https://michigan.aaa.com/" target="_blank"><img src="assets/images/fa79de2a033f24fed282ff9ffd075b4c.gif" alt="Mobirise" title=""></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -291,7 +291,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/aea-logo-2013-colored-436x210.jpg" alt="Mobirise" title="">  
+                      <a href="http://www.advantageequine.com/" target="_blank"><img src="assets/images/aea-logo-2013-colored-436x210.jpg" alt="Mobirise" title=""></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -313,7 +313,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/index-436x108.png" alt="Mobirise" title="">  
+                      <a href="https://www.aetna.com/" target="_blank"><img src="assets/images/index-436x108.png" alt="Mobirise" title=""></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -335,7 +335,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/american-modern-insurance-squarelogo-1457462201825-280x102.png" alt="Mobirise" title="">  
+                      <a href="https://www.amig.com/" target="_blank"><img src="assets/images/american-modern-insurance-squarelogo-1457462201825-280x102.png" alt="Mobirise" title=""></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -358,7 +358,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/index-436x90.png" alt="Mobirise" title="">  
+                      <a href="https://www.bcbs.com/" target="_blank"><img src="assets/images/index-436x90.png" alt="Mobirise" title=""></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -380,7 +380,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/citizens-insurance-logo-387x130.png" alt="Mobirise" title="">  
+                      <a href="https://www.hanover.com/" target="_blank"><img src="assets/images/citizens-insurance-logo-387x130.png" alt="Mobirise" title=""></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -405,7 +405,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/cnasuretylogo2-436x55.jpg" alt="Mobirise" title="">  
+                      <a href="https://www.cnasurety.com/cna/guest/cnasurety/" target="_blank"><img src="assets/images/cnasuretylogo2-436x55.jpg" alt="Mobirise" title=""></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -427,7 +427,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/logo-235x81.png" alt="Mobirise" title="">  
+                      <a href="https://www.fmibc.com/" target="_blank"><img src="assets/images/logo-235x81.png" alt="Mobirise" title=""></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -450,7 +450,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/carrier-foremost-400x200.jpg" alt="Mobirise" title="">  
+                      <a href="https://www.foremost.com/" target="_blank"><img src="assets/images/carrier-foremost-400x200.jpg" alt="Mobirise" title=""></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -473,7 +473,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/3index-436x99.png" alt="Mobirise" title="">  
+                      <a href="https://www.fmins.com/" target="_blank"><img src="assets/images/3index-436x99.png" alt="Mobirise" title=""></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -495,7 +495,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/hagerty-insurance-logos-astonishing-logo-fresh-5-436x128.png" alt="Mobirise" title="">  
+                      <a href="https://www.hagerty.com/" target="_blank"><img src="assets/images/hagerty-insurance-logos-astonishing-logo-fresh-5-436x128.png" alt="Mobirise" title=""></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -518,7 +518,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/logo-266x89.png" alt="Mobirise" title="">  
+                      <a href="https://www.hap.org/" target="_blank"><img src="assets/images/logo-266x89.png" alt="Mobirise" title=""></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -540,7 +540,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/humana-logo-436x127.png" alt="Mobirise" title="">  
+                      <a href="https://www.humana.com/" target="_blank"><img src="assets/images/humana-logo-436x127.png" alt="Mobirise" title=""></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -562,7 +562,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/index-436x99.png" alt="Mobirise" title="">  
+                      <a href="https://www.illinoismutual.com/" target="_blank"><img src="assets/images/index-436x99.png" alt="Mobirise" title=""></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -585,7 +585,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/libertymutual-436x278.jpg" alt="Mobirise" title="">  
+                      <a href="https://www.libertymutual.com/" target="_blank"><img src="assets/images/libertymutual-436x278.jpg" alt="Mobirise" title=""></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -610,7 +610,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/untitled-396x63.png" alt="Mobirise" title="">  
+                      <a href="https://www.markelinsurance.com/" target="_blank"><img src="assets/images/untitled-396x63.png" alt="Mobirise" title=""></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -632,7 +632,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/logo-mutual-of-omaha-436x209.jpg" alt="Mobirise" title="">  
+                      <a href="https://www.mutualofomaha.com/" target="_blank"><img src="assets/images/logo-mutual-of-omaha-436x209.jpg" alt="Mobirise" title=""></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -655,7 +655,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/nsi.gif" alt="Mobirise" title="">  
+                      <a href="https://www.thesilverlining.com/" target="_blank"><img src="assets/images/nsi.gif" alt="Mobirise" title=""></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -677,7 +677,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/thhktqh63t-1-436x180.jpg" alt="Mobirise" title="">  
+                      <a href="https://www.psmic.com"><img src="assets/images/psmic-310x82.png" alt="Mobirise" title=""></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -700,7 +700,7 @@ the state of Michigan.&nbsp;<strong><br></strong></p>
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/logo-stacked-436x155.png" alt="Mobirise" title="">  
+                      <a href="https://www.priorityhealth.com/" target="_blank"><img src="assets/images/logo-stacked-436x155.png" alt="Mobirise" title=""></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -722,7 +722,7 @@ the state of Michigan.&nbsp;<strong><br></strong></p>
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/2000px-logo-of-the-progressive-corporation.svg-436x53.png" alt="Mobirise" title="">  
+                      <a href="https://www.progressive.com/" target="_blank"><img src="assets/images/2000px-logo-of-the-progressive-corporation.svg-436x53.png" alt="Mobirise" title=""></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -745,7 +745,7 @@ the state of Michigan.&nbsp;<strong><br></strong></p>
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/548c91c6665fc2048f9c5071171917ba-436x83.png" alt="Mobirise" title="">  
+                      <a href="https://www.safeco.com/" target="_blank"><img src="assets/images/548c91c6665fc2048f9c5071171917ba-436x83.png" alt="Mobirise" title=""></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -767,7 +767,7 @@ the state of Michigan.&nbsp;<strong><br></strong></p>
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/pytvj3jh1dsseu6uik5kqhqriq-436x54.png" alt="Mobirise" title="">  
+                      <a href="https://www.stiginc.com/" target="_blank"><img src="assets/images/pytvj3jh1dsseu6uik5kqhqriq-436x54.png" alt="Mobirise" title=""></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -789,7 +789,7 @@ the state of Michigan.&nbsp;<strong><br></strong></p>
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/transamerica-medicare-supplement-436x262.jpg" alt="Mobirise" title="">  
+                      <a href="https://www.transamerica.com" target="_blank"><img src="assets/images/transamerica-medicare-supplement-436x262.jpg" alt="Mobirise" title=""></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -811,7 +811,7 @@ the state of Michigan.&nbsp;<strong><br></strong></p>
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/header-logo-221x45.png" alt="Mobirise" title="">  
+                      <a href="https://www.transamerica.com" target="_blank"><img src="assets/images/header-logo-221x45.png" alt="Mobirise" title=""></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -836,7 +836,7 @@ the state of Michigan.&nbsp;<strong><br></strong></p>
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/7c63e779-3b32-4d01-a758-b2ed82729ba9-252x128.png" alt="Mobirise" title="">  
+                      <a href="https://www.thesilverlining.com/" target="_blank"><img src="assets/images/7c63e779-3b32-4d01-a758-b2ed82729ba9-252x128.png" alt="Mobirise" title=""></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
