--- a/page12.html
+++ b/page12.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create a site</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
 
     
 
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6dzf6Zb2AVbt4zikrCFeRzOFDuMdSKAlXfd5C1Rln8AcCjqsZ/E3VCL/amxGJR0GlUCjliRiBbA6YzBTdyqhm+7WhZkJqqAr/8UCN5Zc5RRSySj5KTHonY5arNZmAoHO">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="DTBOag3rZAzrtrOBFDmg5JWSImHBoB3yajoHhDYmxrroCfTFPwQb6GOuzJwM/pP8t1k5gc5N3tA9HtDAyGYLqAc08/CNtbLq3fRAKfZVqMwFZ5D4S2AAwqrPIy9hTK61">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
