--- a/page18.html
+++ b/page18.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best website templates</a></section><section class="mbr-section content5 cid-r6VLD18QEM" id="content5-3s">
+<section class="engine"><a href="https://mobirise.info/i">free web creation software</a></section><section class="mbr-section content5 cid-r6VLD18QEM" id="content5-3s">
 
     
 
@@ -690,7 +690,7 @@ the state of Michigan.&nbsp;<strong><br></strong></p>
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/2000px-logo-of-the-progressive-corporation.svg-436x530.png" alt="Mobirise" title="">  
+                      <img src="assets/images/2000px-logo-of-the-progressive-corporation.svg-436x531.png" alt="Mobirise" title="">  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
