create github pages

--- a/page10.html
+++ b/page10.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/o">portfolio website templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="puh642yQ+l9AvUxdFy3pWnf0B8PtxGokk8iz2gDhD741efc5LpuUOhsUF6oDezu+WXMgzqN8i5GmNJolIhgRDnISUxWstUbA1Bs+wOk62dHNrmiKkWivMs24UvLyCSmd">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="sI+E34F9B92huMIfMShBRNgZMSdCrJP/31IIY7Z9bwZXydwuCcIbViMSS2LEGCKzXpesvCbhToNULttn5wVbSSXwwYxTej0FAs5jymkYkb8cGkc8JSzyZnbVKORKvHdU">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
